Apply recipe best practices